src/components/service-navigation-language-select/_service-navigation-language-select.scss
.hmrc-service-navigation-language-select {
  @include govuk-font($size: 16);
  @include govuk-clearfix;
}

.hmrc-service-navigation-language-select__list {
  margin-top: 1em;
  float: right;
  text-align: right;
}

.hmrc-service-navigation-language-select__list-item {
  display: inline-block;

  &:first-child::after {
    content: "";
    display: inline-block;
    position: relative;
    top: 0.1875em;
    height: 1em;
    // stylelint-disable-next-line number-max-precision -- gives a 1.5px border width
    border-right: 0.09375em solid  $govuk-text-colour;
  }

  a,
  [aria-current] {
    padding: 0.3125em;
  }
}

// TODO the styles below this line were copied verbatim from prototype, not final
// Tim B had some ideas for refactoring it because of changes coming from GDS soon

.govuk-service-navigation:has(.hmrc-service-navigation-language-select) {
  .govuk-width-container {
    display: flex;
  }
}

.govuk-service-navigation .hmrc-service-navigation-language-select {
  display: inline;
  flex: 0 0 auto;
  margin-top: auto;
  margin-left: auto;

  .hmrc-service-navigation-language-select__list {
    position: relative;
    padding-left: 0;

    @include govuk-responsive-margin(6, $direction: left);

    @include govuk-media-query($from: tablet) {
      margin-top: 0;
      margin-bottom: 0;
      padding: govuk-spacing(4) 0;
    }
  }
}

.hmrc-service-navigation-language-select .govuk-service-navigation__item {
  margin-bottom: govuk-spacing(3);

  @include govuk-responsive-margin(6, $direction: left);

  @include govuk-media-query($from: tablet) {
    margin-bottom: 0;
  }
}

